--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,4 +1,6 @@
 @import '~sn-stylekit/dist/stylekit.css';
+@import 'material-icons/iconfont/material-icons.css';
+@import '@fontsource/roboto';
 
 :root {
   --sn-stylekit-font-size-editor: 16px;
@@ -40,41 +42,9 @@ html {
   @media screen and (max-width: 420px) {
     min-height: -webkit-fill-available;
   }
-
-  .sk-input.textarea {
-    padding: 9px 10px;
-    max-width: inherit;
-    width: calc(100% - 22px);
-    resize: vertical;
-    overflow-y: auto;
-    font-family: var(--sn-stylekit-sans-serif-font);
-    font-size: var(--sn-stylekit-font-size-editor);
-    line-height: 1.7;
-  }
 }
 
-a {
-  color: var(--sn-stylekit-info-color); // #086dd6;
-  text-decoration: none;
+.milkdown {
+  max-width: 100% !important;
+  box-shadow: none !important;
 }
-
-a:hover {
-  text-decoration: underline;
-}
-
-code {
-  box-sizing: border-box;
-  word-wrap: break-word;
-  padding: 0.2em 0.4em;
-  margin: 0;
-  font-size: 85%;
-  background-color: var(--sn-stylekit-contrast-background-color);
-  border-radius: 3px;
-}
-
-p {
-  padding: 0px 1em;
-}
-
-@import './print.scss';
-@import './dark.scss';
