fix: import katex stylesheets (#6)
Co-authored-by: Johnny Almonte <johnny243@users.noreply.github.com>

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,6 +1,7 @@
 @import '~sn-stylekit/dist/stylekit.css';
 @import 'material-icons/iconfont/material-icons.css';
 @import '@fontsource/roboto';
+@import 'katex/dist/katex.min.css';
 
 :root {
   --sn-stylekit-monospace-font: SFMono-Regular, Consolas, Liberation Mono, Menlo,
