--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -2,6 +2,7 @@
 @import 'material-icons/iconfont/material-icons.css';
 @import '@fontsource/roboto';
 @import 'katex/dist/katex.min.css';
+@import 'prism/material-light.css';
 
 :root {
   --sn-stylekit-monospace-font: SFMono-Regular, Consolas, Liberation Mono, Menlo,
