--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -45,3 +45,9 @@ html {
     width: 1.5rem !important;
   }
 }
+
+@media only screen and (min-width: 72rem) {
+  .milkdown {
+    padding: 2.25rem 2.25rem !important;
+  }
+}
