feat: split view (#7)
* feat(wip): codemirror editor

* feat(wip): markdown visual editor

* chore(deps): install react-icons

* feat(wip): codemirror editor

* feat(wip): markdown visual editor

* feat(wip): app wrapper

* fix: toggle button

Co-authored-by: Johnny Almonte <johnny243@users.noreply.github.com>

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -51,3 +51,14 @@ html {
     padding: 2.25rem 2.25rem !important;
   }
 }
+
+.app-header {
+  text-align: right;
+  width: 100%;
+  padding-top: 5px;
+}
+
+.app-header .toggle-button {
+  cursor: pointer;
+  padding-right: 15px;
+}
