fix: remove top/bottom padding for .milkdown

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -48,7 +48,7 @@ html {
 
 @media only screen and (min-width: 72rem) {
   .milkdown {
-    padding: 2.25rem 2.25rem !important;
+    padding: 0 2.25rem !important;
   }
 }
 
