feat: refactor components (#9)
* feat: split-view for web/desktop and mobile

* chore: build

* fix: theme support

* chore: build

* feat: plugin/widgets theme support

* chore: build

* fix: set toolbar divider color

* chore: build

* feat: add support for mermaid diagrams

* chore(deps): update editor-kit

* refactor: advanced-menu plugin

* feat: dynamic editable and spellcheck properties

* chore: build

* fix: set Milkdown editor height

* chore: build

* fix: strike through line color

* chore(deps): update milkdown dependencies

* fix: change to new listener

* feat: enable cursor plugin

* fix: generate plain preview with marked

* chore: build

* refactor: update text via ref

* fix: table header and border color

* fix: image container and tooltip input background color

* fix: table data cell and code element colors

* chore: build

* feat: history undo/redo support

* chore: build

* chore(deps): update @standardnotes/editor-kit

* fix: use types from @standardnotes/editor-kit

* chore(deps): remove unused

* chore(deps): update packages to 5.5.0

* fix: check if code editor is focused so that subsequent updates are not received from Milkdown editor

* chore: build

* fix: check if hasFocus inside component

* refactor: generateCustomPreview

* fix: editor refs with useRef

* fix: milkdown scrollbar color

* feat: simple splitview component

* chore: build

* fix: styles for vertical

* chore: build

* fix: add spellcheckControl to sample.ext.json

* fix: update README.md

* fix: package name

Co-authored-by: Johnny Almonte <johnny243@users.noreply.github.com>

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -26,6 +26,10 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+#root {
+  height: 100%;
+}
+
 .sn-component {
   display: flex;
   flex-direction: column;
@@ -36,41 +40,48 @@ html {
   }
 }
 
-.milkdown {
-  max-width: 100% !important;
-  box-shadow: none !important;
-  padding: 0 2.25rem !important;
-  background-color: var(--sn-stylekit-background-color) !important;
-  color: var(--sn-stylekit-editor-foreground-color) !important;
+.container {
+  flex: 1;
+  flex-grow: 1;
+  display: flex;
+  width: 100%;
+  height: 100%;
 
-  .emoji {
-    height: 1.5rem !important;
-    width: 1.5rem !important;
+  > .separator {
+    background-color: var(--sn-stylekit-border-color);
   }
 }
 
-.app-header {
-  text-align: right;
-  width: 100%;
-  padding-top: 5px;
+.container.horizontal {
+  flex-direction: row;
+  overflow-x: clip;
+
+  .column {
+    flex: 1;
+  }
+
+  .separator {
+    width: 10px;
+  }
 }
 
-.app-header .toggle-button {
-  cursor: pointer;
-  padding-right: 15px;
-  color: var(--sn-stylekit-editor-foreground-color) !important;
-}
+.container.vertical {
+  flex-direction: column;
+  overflow-y: clip;
 
-.milkdown .editor > * {
-  margin-top: 0 !important;
-  margin-bottom: 1.875rem !important;
-}
+  .row.full {
+    height: 100%;
+  }
 
-.cm-editor {
-  background-color: var(--sn-stylekit-background-color) !important;
-  color: var(--sn-stylekit-editor-foreground-color) !important;
+  .row.half {
+    height: 40%;
+  }
 
-  .cm-content {
-    caret-color: var(--sn-stylekit-editor-foreground-color) !important;
+  .separator {
+    height: 1%;
+  }
+
+  .row.half:last-child {
+    height: 59%;
   }
 }
