fix: inline code element colors

--- a/src/components/Milkdown/styles.scss
+++ b/src/components/Milkdown/styles.scss
@@ -153,7 +153,7 @@
             color: var(--sn-stylekit-foreground-color);
           }
 
-          code {
+          .code-inline {
             color: var(--sn-stylekit-background-color);
             background-color: var(--sn-stylekit-foreground-color);
           }
