--- a/src/components/Milkdown/styles.scss
+++ b/src/components/Milkdown/styles.scss
@@ -110,7 +110,7 @@
           }
 
           p.paragraph {
-            font-size: 0.9rem !important;
+            font-size: var(--sn-stylekit-font-size-editor) !important;
           }
 
           .strike-through {
@@ -131,6 +131,7 @@
               color: var(--sn-stylekit-neutral-contrast-color);
               border: var(--lineWidth) solid var(--sn-stylekit-border-color);
               background-color: var(--sn-stylekit-neutral-color) !important;
+              background-clip: padding-box;
             }
 
             td {
@@ -152,8 +153,9 @@
             color: var(--sn-stylekit-foreground-color);
           }
 
-          code {
-            background-color: var(--sn-stylekit-paragraph-text-color);
+          .code-inline {
+            color: var(--sn-stylekit-background-color);
+            background-color: var(--sn-stylekit-foreground-color);
           }
         }
 
@@ -213,10 +215,6 @@
           input::placeholder {
             color: var(--sn-stylekit-neutral-color) !important;
           }
-        }
-
-        .paragraph {
-          line-height: 1rem;
         }
       }
     }
